2002-04-16  Sam Steingold  <sds@gnu.org>

	error reporting unification
	* record.d (fehler_key_odd): new function
	(check_keywords): new macro
	(%ALLOCATE_INSTANCE, %SHARED-INITIALIZE, %REINITIALIZE-INSTANCE)
	(%INITIALIZE-INSTANCE, %MAKE-INSTANCE): use them
	* constsym.d: define SHARED-INITIALIZE, REINITIALIZE-INSTANCE,
	INITIALIZE-INSTANCE, MAKE-INSTANCE here for error reporting
	* subr.d, constsym.d: %* should be named p*, not *

2002-04-16  Stefan Kain  <stefan.kain@freenet.de>

	* clos.lisp, record.d: translated all comments

2002-04-12  Peter Burwood  <clisp@peterb.org.uk>

	* stream.d (finish_tty_output) [UNIX_CYGWIN32]: ignore EBADF from
	fsync, just like in force_tty_output()

2002-04-12  Sam Steingold  <sds@gnu.org>

	*BROWSERS* and *BROWSER* are in CUSTOM, as advertised
	* init.lisp (*browser*, *browsers*): export from CUSTOM
	* clhs.lisp (*browser*, *browsers*): docstrings
	(*browsers*): xterm is UNIX-only
	* cfgamiga.lisp, cfgdos.lisp, cfgsunux.lisp, cfgunix.lisp:
	* cfgwin32.lisp, cfgacorn.lisp: suggest customizing *BROWSER*

2002-04-12  Sam Steingold  <sds@gnu.org>

	* time.d (DELTA4): work with up to 64-bit return values
	* lispbibl.d, intelem.d (UL2_to_I): define always

2002-04-11  Peter Burwood  <clisp@peterb.org.uk>

	* errunix.d (get_errormsg): prevent EILSEQ shadowing ENOENT

2002-04-10  Sam Steingold  <sds@gnu.org>

	new built-in DELTA4 for metering.lisp optimization
	* time.d (delta4): implemented
	* subr.d, constsym.d (delta4): added
	* defs1.lisp (%time): use DELTA4

2002-04-10  Sam Steingold  <sds@gnu.org>

	* configure: handle --with-no-dynamic-modules
	* makemake.in: uniform handling of --with* arguments

2002-04-05  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* modules.d (MODULE): silence the compiler warning about
	module__*__init_function_*() prototype
	* modules/regexp/regexi.c: include <stdlib.h> before "regex.h"

2002-04-04  Stefan Kain  <stefan.kain@freenet.de>
